WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284941
Ensure RemoteMediaEngineConfigurationFactoryProxy messages are not sent when MediaPlaybackEnabled is false
https://bugs.webkit.org/show_bug.cgi?id=284941
Summary
Ensure RemoteMediaEngineConfigurationFactoryProxy messages are not sent when ...
Sihui Liu
Reported
2024-12-18 22:46:54 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-18 22:48:03 PST
<
rdar://problem/141733758
>
Sihui Liu
Comment 2
2024-12-18 22:50:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38194
EWS
Comment 3
2024-12-20 10:04:05 PST
Committed
288168@main
(618273ab0303): <
https://commits.webkit.org/288168@main
> Reviewed commits have been landed. Closing PR #38194 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug