Ensure RemoteMediaEngineConfigurationFactoryProxy messages are not sent when MediaPlaybackEnabled is false https://bugs.webkit.org/show_bug.cgi?id=284941 rdar://141733758

Reviewed by Youenn Fablet.

RemoteMediaEngineConfigurationFactoryProxy message endpoints are annotated with MediaPlaybackEnabled, which means
GPU process does not expect to receive these messages when MediaPlaybackEnabled is false. Accordingly, we need to make
sure web process does not send out these messages when MediaPlaybackEnabled is false. This patch implements that by
checking MediaPlaybackEnabled flag value in RemoteMediaEngineConfigurationFactory before sending out message.

* Source/WebKit/WebProcess/GPU/media/RemoteMediaEngineConfigurationFactory.cpp:
(WebKit::RemoteMediaEngineConfigurationFactory::createDecodingConfiguration):
(WebKit::RemoteMediaEngineConfigurationFactory::createEncodingConfiguration):
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::enableMediaPlayback):
* Source/WebKit/WebProcess/WebProcess.h:

Canonical link: https://commits.webkit.org/288168@main